# Metaheuristics

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Pipfile  pyproject.toml
l1/z1/: Makefile  local_search.py  main.py  metaheuristics.py
l1/z2/: Makefile  tabu.py  test2
l1/z3/: Makefile  maze.py  test  test2
l2/: matrix.py  maze.py  metaheuristics.py  salomon.py
l3/: yang.py
l3/z1/: yang.py
l3/z2/: ga.py  words.py
l3/z3/: ga.py  maze.py
projekt/: maze.py  metaheuristics.py
