[tool.poetry]
name = "metaheuristics"
version = "0.1.0"
description = ""
authors = ["pawelrubin <pawelrubin19@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.4.4"
isort = "^4.3.21"
flake8 = "^3.7.9"
mypy = "^0.770"
bandit = "^1.6.2"
pyupgrade = "^2.2.0"
ipython = "^7.13.0"
rope = "^0.16.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
